@@ -33,7 +33,7 @@ namespace C.ObjC
     /// Collection of one or more object files compiled against ObjectiveC.
     /// </summary>
     public class ObjectFileCollection :
-        C.CModuleContainer<ObjectFile>
+        C.CCompilableModuleContainer<ObjectFile>
     {
         protected override void
         Init(
